# dwarf-p-cloudsc2-tl-ad

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  bologna_build.sh  bologna_build_and_run_python_driver.sh  build_daint.sh  build_lumi.sh  build_mlux.sh  bundle.yml  cloudsc-bundle  mac_build.sh  mac_build_and_run_python_driver.sh
src/cloudsc2_ad/: CMakeLists.txt  cloudsc2ad.F90  cloudsc2tl.F90  cloudsc_driver_ad_mod.F90  cuadjtqs.F90  cuadjtqsad.F90  cuadjtqstl.F90  dwarf_cloudsc.F90
src/cloudsc2_ad_loki/: CMakeLists.txt  cloudsc2ad.F90  cloudsc2tl.F90  cloudsc_driver_ad_loki_mod.F90  cloudsc_driver_ad_mod.F90  cloudsc_loki.config  cuadjtqsad.F90  dwarf_cloudsc.F90  satur.F90
src/cloudsc2_gt4py/: README.md  bootstrap_venv.sh  pyproject.toml  requirements-dev.txt
src/cloudsc2_gt4py/drivers/: compile_daint.sh  compile_lumi.sh  compile_mlux.sh  config.py  run_fortran.py  run_fortran_daint.py  run_fortran_lumi.py  run_fortran_mlux.py  run_nonlinear.py  run_symmetry_test.py  run_taylor_test.py  test.csv  test_stencils.csv  utils.py
src/cloudsc2_gt4py/scripts/: make_plot_scaling.py  run.py  run_batch.sh
src/cloudsc2_gt4py/scripts/_dacegraphs/: program.sdfg
src/cloudsc2_gt4py/scripts/plots/: scaling.eps
src/cloudsc2_gt4py/src/cloudsc2py/: __init__.py  state.py
src/cloudsc2_gt4py/src/cloudsc2py/physics/adjoint/: __init__.py  microphysics.py  validation.py
src/cloudsc2_gt4py/src/cloudsc2py/physics/common/: __init__.py  diagnostics.py  increment.py  saturation.py
src/cloudsc2_gt4py/src/cloudsc2py/physics/nonlinear/: __init__.py  microphysics.py  validation.py
src/cloudsc2_gt4py/src/cloudsc2py/physics/tangent_linear/: __init__.py  microphysics.py  microphysics_ng.py  validation.py
src/cloudsc2_gt4py/src/cloudsc2py/utils/: iox.py
src/cloudsc2_gt4py/tests/: conftest.py  pytest.ini  test_collections.py  test_io.py  test_lower_dimensional.py  test_subroutine_externals.py  test_subroutine_scalar.py  test_time.py  test_vertical_offset.py
src/cloudsc2_nl/: CMakeLists.txt  cloudsc2.F90  cloudsc_driver_mod.F90  dwarf_cloudsc.F90  satur.F90
src/cloudsc2_nl_loki/: CMakeLists.txt  README.md  cloudsc2.F90  cloudsc2.scc.F90  cloudsc_driver_loki_mod.F90  cloudsc_driver_loki_mod.scc.F90  cloudsc_driver_mod.F90  cloudsc_loki.config  dwarf_cloudsc.F90  satur.F90
src/cloudsc2_nl_pyiface/: CMakeLists.txt  README  cloudsc2ifaces.py  cloudsc_driver_mod.F90  cuadjtqs.F90  dwarfdriver.py  fortifaces.py
src/cloudsc2_nl_pyiface/fortransrc/: cloudsc2.F90  cloudsc_driver_mod.F90  dwarf_cloudsc.F90  satur.F90
src/cloudsc2_nl_pyiface/pythonsrc/: cloudsc2_data.py  cloudsc2_driver.py  cloudsc2_inputs.py  cloudsc2ifaces.py  dwarfdriver.py  run_python_driven_cloudsc2.sh
src/cloudsc2_python/: prepare.sh  requirements.txt  setup.cfg
src/cloudsc2_python/drivers/: config.py  driver_adjoint.py  driver_nonlinear.py  driver_symmetry_test.py  driver_tangent.py  driver_taylor_test.py  namelist_adjoint.py  namelist_nonlinear.py  namelist_symmetry_test.py  namelist_tangent.py  namelist_taylor_test.py  run_fortran.py  run_nonlinear.py  run_symmetry_test.py  run_tangent.py  run_taylor_test.py  utils.py
src/cloudsc2_python/scripts/: reference.h5  run_batch.py
src/cloudsc2_python/src/cloudsc2py/: state.py
src/cloudsc2_python/src/cloudsc2py/framework/: components.py  config.py  options.py  stencil.py  storage.py
src/cloudsc2_python/src/cloudsc2py/physics/adjoint/: microphysics.py  microphysics_ng.py  validation.py
src/cloudsc2_python/src/cloudsc2py/physics/common/: __init__.py  increment.py  saturation.py
src/cloudsc2_python/src/cloudsc2py/physics/nonlinear/: microphysics.py  microphysics_fvm.py  microphysics_ng.py  validation.py
src/cloudsc2_python/src/cloudsc2py/utils/: f2py.py  iox.py  numpyx.py  typingx.py
src/cloudsc2_python/tests/: test_assignment.py  test_saturation_nl.py  test_slots.py
src/cloudsc2_tl/: CMakeLists.txt  cloudsc2.F90  cloudsc2tl.F90  cloudsc_driver_tl_mod.F90  cuadjtqstl.F90  dwarf_cloudsc.F90
src/cloudsc2py/: bootstrap_venv.sh  pyproject.toml  requirements_dev.txt  setup.cfg
src/cloudsc2py/cloudsc2py/: __init__.py  state.py
src/cloudsc2py/cloudsc2py/framework/: __init__.py  components.py  config.py  grid.py  grid_operator.py  options.py  stencil.py  storage.py
src/cloudsc2py/cloudsc2py/physics/: __init__.py
src/cloudsc2py/cloudsc2py/physics/adjoint/: __init__.py  microphysics.py  microphysics_ng.py  validation.py
src/cloudsc2py/cloudsc2py/physics/common/: __init__.py  diagnostics.py  fcttre.py  increment.py  saturation.py
src/cloudsc2py/cloudsc2py/physics/nonlinear/: __init__.py  cuadjtqs.py  microphysics.py  microphysics_ng.py  saturation.py  validation.py
src/cloudsc2py/cloudsc2py/physics/tangent_linear/: __init__.py  cuadjtqs.py  microphysics.py  microphysics_ng.py  validation.py
src/cloudsc2py/cloudsc2py/utils/: __init__.py  f2py.py  io.py  storage.py  timing.py  typingx.py  validation.py
src/cloudsc2py/drivers/: driver_adjoint.py  driver_nl.py  driver_nonlinear.py  driver_symmetry_test.py  driver_tangent.py  driver_taylor_test.py  driver_tl.py  driver_tt.py  namelist_adjoint.py  namelist_nl.py  namelist_nonlinear.py  namelist_symmetry_test.py  namelist_tangent.py  namelist_taylor_test.py  namelist_tl.py  namelist_tt.py  utils.py
src/cloudsc2py/scripts/: make_barplot.py  make_plot_scaling.py  plot.py  plot_utils.py  run.py  run.sh  run_batch.py  run_batch.sh  utils.py
src/common/: CMakeLists.txt
src/common/include/: cloudsc2.intfb.h  cloudsc2loki.intfb.h  cuadjtqs.intfb.h  cuadjtqsad.intfb.h  cuadjtqstl.intfb.h  fcttread.base.h  fcttread.func.h  fcttread.ycst.h  fcttretl.base.h  fcttretl.func.h  fcttretl.ycst.h  satur.intfb.h
src/common/module/: abor1.F90  cloudsc2_array_state_mod.F90  cloudsc_global_state_mod.F90  cloudsc_mpi_mod.F90  cloudsc_mpif.F90  ec_pmon_mod.F90  expand_mod.F90  fccld_mod.F90  fcttre_mod.F90  file_io_mod.F90  hdf5_file_mod.F90  mycpu.c  parkind1.F90  routines.F90  timer_mod.F90  validate_mod.F90  yoecld.F90  yoecldp.F90  yoephli.F90  yoethf.F90  yomcst.F90  yomncl.F90  yomphyder.F90  yophnc.F90
(+102 files in other folders)
