[metadata]
name = cloudsc2py
description = GT4Py-based implementation of the CLOUDSC2 dwarf
author = ETH Zurich
author_email = subbiali@phys.ethz.ch
project_urls =
    Source = https://github.com/ecmwf-ifs/dwarf-p-cloudsc2-tl-ad
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: Apache License, Version 2.0
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
package_dir =
    =src
packages = cloudsc2py
include_package_data = True
python_requires = >= 3.7
install_requires =
    click
    dace
    gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@main#egg=gt4py
    h5py
    numpy
    pandas
    pydantic
    sympl @ git+https://github.com/stubbiali/sympl.git@oop#egg=sympl
    xarray

;[tool:pytest]
;testpaths = tests

;[build_sphinx]
;source-dir = docs/source
;build-dir = docs/build
;builder = html latexpdf

[flake8]
exclude =
    .eggs
    .git
max-line-length = 100
